--- a/src/VBox/Installer/win/Makefile.kmk
+++ b/src/VBox/Installer/win/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72040 2018-04-26 14:01:18Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72044 2018-04-26 15:05:24Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Windows installer.
 #
@@ -1006,11 +1006,14 @@ RePackScripts_INSTTYPE = stage
 RePackScripts_SOURCES = \
 	Scripts/PackDriversForSubmission.cmd \
 	Scripts/UnpackBlessedDrivers.cmd \
-	Scripts/RepackExtPack.cmd \
 	$(RePackScripts_0_OUTDIR)/sign-dual.cmd \
 	$(RePackScripts_0_OUTDIR)/sign-sha1.cmd \
 	$(RePackScripts_0_OUTDIR)/VMMR0.inf \
 	$(RePackScripts_0_OUTDIR)/VBoxExtPackPuel.inf
+if !defined(VBOX_WITH_COMBINED_PACKAGE) || "$(KBUILD_TARGET_ARCH)" == "x86"
+ RePackScripts_SOURCES += \
+ 	Scripts/RepackExtPack.cmd
+endif
 RePackScripts_CLEAN = \
 	$(RePackScripts_0_OUTDIR)/sign-dual.cmd \
 	$(RePackScripts_0_OUTDIR)/sign-sha1.cmd \
