FE/Qt: bugref:9049: Move common 2D Video Acceleration code from VBoxFBOverlay class to VBox2DHelpers namespace. To be reused by VBoxGlobal library.
svn:sync-xref-src-repo-rev: r122413

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72043 2018-04-26 14:26:02Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72057 2018-04-27 11:55:52Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -1134,6 +1134,7 @@ endif
 
 if defined(VBOX_WITH_VIDEOHWACCEL) || defined(VBOX_GUI_USE_QGL)
  VirtualBox_SOURCES += \
+	src/VBox2DHelpers.cpp \
 	src/VBoxFBOverlay.cpp \
 	src/VBoxGLSupportInfo.cpp
 endif
