WDDM: x86 debug build of the miniport driver needs memcmp to work on Win7 and Vista.
svn:sync-xref-src-repo-rev: r122474

--- a/src/VBox/Additions/WINNT/Graphics/Video/mp/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Video/mp/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71323 2018-03-14 14:05:32Z vitali.pelenjow@oracle.com $
+# $Id: Makefile.kmk 72082 2018-05-02 13:50:00Z vitali.pelenjow@oracle.com $
 ## @file
 # Makefile for the Windows guest miniport driver.
 #
@@ -157,6 +157,9 @@ ifdef VBOX_WITH_WDDM
  	$(VBOX_LIB_VBGL_R0) \
  	$(VBOX_LIB_IPRT_GUEST_R0) \
  	$(VBOX_PATH_ADDITIONS_LIB)/HGSMIGuestR0Lib$(VBOX_SUFF_LIB)
+
+ VBoxWddm_LIBS.x86         = \
+ 	$(PATH_SDK_$(VBOX_WINDDK_GST_W8)_LIB)/memcmp.lib
 
 endif # VBOX_WITH_WDDM
 
