/Makefile.kmk/VBOX_RSYNC_IN_FN: Let's try not rsync anything from the 'out' directory into the VMs.
svn:sync-xref-src-repo-rev: r122502

--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72069 2018-04-30 12:03:21Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72108 2018-05-04 11:07:23Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -975,15 +975,10 @@ VBOX_RSYNC_IN_FN = rsync -a -v --delete --delete-excluded --prune-empty-dirs \
 	--exclude=tinderclient.log \
 	--exclude=tools/FetchDir/ \
 	--exclude=webtools/ \
-	$(foreach os,darwin freebsd linux solaris os2 win,$(if-expr "$(1)" != "$(os)", \
+	--exclude=out/ \
+	$(foreach os,$(filter-out $(1), darwin freebsd linux solaris os2 win), \
 		--exclude=tools/$(os).x86/ \
-		--exclude=tools/$(os).amd64/ \
-		--exclude=out/$(os).amd64/ \
-		--exclude=out/$(os).x86/ \
-	,$(select \
-		"$(2)" == "x86"  , --exclude=out/$(os).amd64/$(KBUILD_TYPE)/, \
-		"$(2)" == "amd64", --exclude=out/$(os).x86/$(KBUILD_TYPE)/) \
-	))
+		--exclude=tools/$(os).amd64/ )
 
 #
 # VM IP addresses.
