tstDeviceStructSizeRC: Add new serial port implementation
svn:sync-xref-src-repo-rev: r122514

--- a/src/VBox/Devices/testcase/Makefile.kmk
+++ b/src/VBox/Devices/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71721 2018-04-06 20:51:26Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72119 2018-05-04 16:45:29Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the device testcases.
 #
@@ -48,6 +48,7 @@ VBOX_DEVICES_TESTS_FEATURES = \
 	$(if $(VBOX_WITH_VMSVGA),VBOX_WITH_VMSVGA,) \
 	$(if $(VBOX_WITH_WDDM),VBOX_WITH_WDDM,) \
 	$(if $(VBOX_WITH_XHCI_IMPL),VBOX_WITH_XHCI_IMPL,) \
+	$(if $(VBOX_WITH_NEW_SERIAL),VBOX_WITH_NEW_SERIAL,) \
        $(VBOX_AUDIO_DEFS)
 
 #
