--- a/src/VBox/Additions/x11/VBoxClient/Makefile.kmk
+++ b/src/VBox/Additions/x11/VBoxClient/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72114 2018-05-04 16:00:01Z noreply@oracle.com $
+# $Id: Makefile.kmk 72124 2018-05-04 21:24:22Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest Addition X11 Client.
 #
@@ -73,6 +73,20 @@ VBoxClient_LIBS += \
 # Furthermore, they contain references to memcpy, which needs to be resolved
 # to memcpy@GLIBC_2.2.5, which we solve in a not-very-satisfactory way with a
 # wrapper.
+##
+## @todo r=bird: With all due respect, what are you smoking??  The above does not compute,
+## so there is either some other reason which you fail to describe or you've got it all wrong.
+## It cannot be for reasons of symbol resolution, because puttin chk_stubs.c in SOURCES would
+## make absolutely sure the symbols in it would always be part of the link and present in the
+## symbol table before any library searching is done.  I cannot see how the --wrap-memcpy could
+## have anything to do with this either.
+##
+## Your query on IRC why chk_stubs.c is treated as C++, that's because the linker is called g++.
+##
+## Please explain why this nonsese is required or I will revert it and leave you deal with the consequences.
+##
+## -bird
+##
 ifeq ($(KBUILD_TARGET),linux)
 VBoxClient_LIBS    += \
 	$(PATH_ROOT)/src/VBox/Additions/x11/VBoxClient/chk_stubs.c
