--- a/src/VBox/ValidationKit/bootsectors/bs3kit/Makefile.kmk
+++ b/src/VBox/ValidationKit/bootsectors/bs3kit/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70668 2018-01-22 09:02:48Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 72125 2018-05-04 22:10:02Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Bootsector Kit v3
 #
@@ -174,6 +174,7 @@ VBOX_BS3KIT_COMMON_SOURCES = \
 	bs3-cmn-Trap32SetGate.c \
 	bs3-cmn-Trap64Init.c \
 	bs3-cmn-Trap64SetGate.c \
+	bs3-cmn-TrapSetDpl.c \
 	bs3-cmn-TrapDefaultHandler.c \
 	bs3-cmn-TrapHandlersData.asm \
 	bs3-cmn-TrapPrintFrame.c \
