--- a/src/VBox/ValidationKit/bootsectors/Makefile.kmk
+++ b/src/VBox/ValidationKit/bootsectors/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71587 2018-03-31 12:51:29Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72130 2018-05-04 23:18:37Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Bootsector Tests for Test Drivers or standalone testing.
 #
@@ -254,6 +254,18 @@ bs3-cpu-basic-2-template.o:: \
 	$$(bs3-cpu-basic-2_0_OUTDIR)/bs3kit/bs3-cmn-instantiate.o32 \
 	$$(bs3-cpu-basic-2_0_OUTDIR)/bs3kit/bs3-cmn-instantiate.o64 \
 	$$(bs3-cpu-basic-2_0_OUTDIR)/bs3-cpu-basic-2-asm.o16
+
+ifndef VBOX_OSE # Will be exported at some later point.
+# CPU weird stuff #1.
+MISCBINS += bs3-cpu-weird-1
+bs3-cpu-weird-1_TEMPLATE = VBoxBS3KitImg
+bs3-cpu-weird-1_INCS  = .
+bs3-cpu-weird-1_SOURCES = \
+	bs3kit/bs3-first-rm.asm \
+	bs3-cpu-weird-1.c \
+	bs3-cpu-weird-1-x0.c \
+	bs3-cpu-weird-1-asm.asm
+endif
 
 # FPU state corruption checker.
 MISCBINS += bs3-fpustate-1
