FE/Qt bugref:6769 the first implementation of a widget thru which user can enter a vm name and vm destination path.
svn:sync-xref-src-repo-rev: r122532

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72109 2018-05-04 11:40:15Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72136 2018-05-07 10:01:05Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -682,6 +682,7 @@ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/widgets/UISpecialControls.h \
 	src/widgets/UIStatusBarEditorWindow.h \
 	src/widgets/UIToolBar.h \
+	src/widgets/UIVMNamePathSelector.h \
 	src/widgets/UIWarningPane.h \
 	src/wizards/UIWizard.h \
 	src/wizards/UIWizardPage.h \
@@ -823,6 +824,7 @@ VBoxGlobal_QT_MOCHDRS = \
 	src/widgets/UISpecialControls.h \
 	src/widgets/UIStatusBarEditorWindow.h \
 	src/widgets/UIToolBar.h \
+	src/widgets/UIVMNamePathSelector.h \
 	src/widgets/UIWarningPane.h \
 	src/wizards/UIWizard.h \
 	src/wizards/UIWizardPage.h \
@@ -1266,6 +1268,7 @@ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/widgets/UISpecialControls.cpp \
 	src/widgets/UIStatusBarEditorWindow.cpp \
 	src/widgets/UIToolBar.cpp \
+	src/widgets/UIVMNamePathSelector.cpp \
 	src/widgets/UIWarningPane.cpp \
 	src/wizards/UIWizard.cpp \
 	src/wizards/UIWizardPage.cpp \
@@ -1434,6 +1437,7 @@ VBoxGlobal_SOURCES = \
 	src/widgets/UISpecialControls.cpp \
 	src/widgets/UIStatusBarEditorWindow.cpp \
 	src/widgets/UIToolBar.cpp \
+	src/widgets/UIVMNamePathSelector.h \
 	src/widgets/UIWarningPane.cpp \
 	src/wizards/UIWizard.cpp \
 	src/wizards/UIWizardPage.cpp \
