--- a/src/VBox/Installer/linux/rpm/rules
+++ b/src/VBox/Installer/linux/rpm/rules
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-# $Id: rules 69500 2017-10-28 15:14:05Z knut.osmundsen@oracle.com $
+# $Id: rules 72145 2018-05-07 15:21:07Z noreply@oracle.com $
 ## @file
 # VirtualBox rules.
 #
@@ -172,7 +172,8 @@ bld_flags := AUTOCFG=$(current)/rpm/AutoConfig.kmk \
 	     $(if $(filter el5 el6,$(rpmrel)),,VBOX_WITH_VMSVGA3D=1) \
 	     VBOX_DO_STRIP= \
 	     $(if $(filter el5,$(rpmrel)),VBOX_BLD_PYTHON=$(strip \
-		$(firstword $(wildcard /usr/local/bin/python2.7) $(wildcard /usr/bin/python))),) \
+		$(firstword $(wildcard /usr/local/bin/python2.7) \
+		$(wildcard /usr/bin/python2.6) $(wildcard /usr/bin/python))),) \
 	     $(doc_dir) \
 	     $(if $(ose),,VBOX_WITH_DOCS_CHM=1) \
 	     VBOX_PACKAGE_DIST=$(rpmdist) \
