--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72218 2018-05-15 15:12:32Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72219 2018-05-15 15:34:56Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -68,7 +68,7 @@ src/platform/win/VirtualBoxHardened.rc_DEPS  = $(VirtualBox_0_OUTDIR)/VirtualBox
 ifeq ($(KBUILD_TARGET),darwin)
  VirtualBoxVM_EXTENDS = VirtualBoxHardened
  VirtualBoxVM_NAME    = VirtualBoxVM
- VirtualBoxVM_DEFS    = $(VirtualBoxHardened_DEFS) VIRTUALBOX_VM
+ VirtualBoxVM_DEFS    = $(VirtualBoxHardened_DEFS) VBOX_RUNTIME_UI
 endif
 
 
