--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72220 2018-05-15 16:01:36Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72227 2018-05-17 08:11:13Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -1177,7 +1177,8 @@ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/widgets/UIMiniToolBar.cpp \
 	src/widgets/UIPortForwardingTable.cpp \
 	src/widgets/UIProgressDialog.cpp \
-	src/widgets/UIStatusBarEditorWindow.cpp
+	src/widgets/UIStatusBarEditorWindow.cpp \
+	src/widgets/UIVMNamePathSelector.cpp
 
  ifdef VBOX_GUI_WITH_NETWORK_MANAGER
   VirtualBox_QT_MOCSRCS += \
