--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72227 2018-05-17 08:11:13Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 72230 2018-05-17 09:32:36Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -1249,7 +1249,8 @@ ifdef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/widgets/UIHotKeyEditor.cpp \
 	src/widgets/UIPortForwardingTable.cpp \
 	src/widgets/UIProgressDialog.cpp \
-	src/widgets/UIStatusBarEditorWindow.cpp
+	src/widgets/UIStatusBarEditorWindow.cpp \
+	src/widgets/UIVMNamePathSelector.cpp
 
  ifdef VBOX_GUI_WITH_NETWORK_MANAGER
   VBoxGlobal_QT_MOCSRCS += \
