FE/Qt: bugref:9049: Forgot something important in r122659.
svn:sync-xref-src-repo-rev: r122677

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72230 2018-05-17 09:32:36Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72233 2018-05-17 11:06:27Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -184,7 +184,7 @@ ifdef VBOX_GUI_WITH_SHARED_LIBRARY
  # VirtualBox Virtual Machine Application
  #
  VirtualBoxVM_TEMPLATE       := $(if $(VBOX_WITH_HARDENING),VBOXQTGUI,VBOXQTGUIEXE)
- VirtualBoxVM_NAME           = VirtualBoxRT
+ VirtualBoxVM_NAME           = VirtualBoxVM
  VirtualBoxVM_SDKS.win       = ReorderCompilerIncs $(VBOX_WINPSDK) $(VBOX_WINDDK)
  VirtualBoxVM_DEFS           += VBOX_RUNTIME_UI
  VirtualBoxVM_DEFS.debug     = VBOX_CHECK_STATE # QT_FATAL_ASSERT
