--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72246 2018-05-17 14:08:38Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72247 2018-05-17 17:28:18Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -88,6 +88,7 @@ else
  VirtualBoxHardenedVM_SOURCES = src/hardenedmain.cpp
  VirtualBoxHardenedVM_SOURCES.win = src/platform/win/VirtualBoxHardened.rc
  VirtualBoxHardenedVM_NAME = VirtualBoxVM
+ VirtualBoxHardenedVM_DEFS = VBOX_GUI_WITH_SHARED_LIBRARY
  VirtualBoxHardenedVM_LDFLAGS.win = /SUBSYSTEM:$(if-expr "$(KBUILD_TYPE)" != "release",console,windows)
  src/platform/win/VirtualBoxHardened.rc_INCS  = $(VirtualBox_0_OUTDIR)
  src/platform/win/VirtualBoxHardened.rc_DEPS  = $(VirtualBox_0_OUTDIR)/VirtualBox-icon.rc
