FE/Qt: bugref:9049: One more adjustment to Makefile for split hardened build on macOS.
svn:sync-xref-src-repo-rev: r122719

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72247 2018-05-17 17:28:18Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72271 2018-05-21 12:42:13Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -501,7 +501,8 @@ ifdef VBOX_GUI_WITH_SHARED_LIBRARY
  endif
 
  VBoxGlobal_LDFLAGS.darwin = \
-	-framework AppKit -framework Carbon -framework IOKit
+	-framework AppKit -framework Carbon -framework IOKit \
+	$(if $(VBOX_WITH_HARDENING),-install_name $(VBOX_DYLD_EXECUTABLE_PATH)/VBoxGlobal.dylib)
 
  if defined(VBOX_WITH_VIDEOHWACCEL) || defined(VBOX_GUI_USE_QGL)
   VBoxGlobal_LDFLAGS.darwin += -framework OpenGL
