Installer/Darwin: bugref:9049: Support for split GUI functionality.
svn:sync-xref-src-repo-rev: r122725

--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69150 2017-10-20 15:19:50Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 72277 2018-05-21 15:45:22Z sergey.dubov@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -393,11 +393,20 @@ ifdef VBOX_WITH_DEBUGGER_GUI
  	MacOS/DbgPlugInDiggers.dylib
 endif
 ifdef VBOX_WITH_HARDENING
- VBOX_DI_VBAPP_DYLIBS += \
- 	MacOS/VirtualBox.dylib \
- 	MacOS/VBoxNetDHCP.dylib \
-	MacOS/VBoxNetNAT.dylib \
- 	MacOS/VBoxHeadless.dylib
+ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
+  VBOX_DI_VBAPP_DYLIBS += \
+  	MacOS/VirtualBox.dylib \
+  	MacOS/VBoxNetDHCP.dylib \
+  	MacOS/VBoxNetNAT.dylib \
+  	MacOS/VBoxHeadless.dylib
+ else
+  VBOX_DI_VBAPP_DYLIBS += \
+  	MacOS/VBoxGlobal.dylib \
+  	MacOS/VirtualBoxVM.dylib \
+  	MacOS/VBoxNetDHCP.dylib \
+  	MacOS/VBoxNetNAT.dylib \
+  	MacOS/VBoxHeadless.dylib
+ endif
 endif
 ifdef VBOX_WITH_HDDPARALLELS_INSTALL
  VBOX_DI_VBAPP_DYLIBS += \
@@ -764,9 +773,15 @@ endif
 	sudo chown -R root:admin $(VBOX_PATH_PACK_TMP)/VirtualBox.pkg.root
 	sudo chmod u+s $(VBOX_PATH_VBOX_APP_TMP)/Contents/MacOS/VBoxNetAdpCtl
 ifdef VBOX_WITH_HARDENING
+ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
 	sudo chmod u+s \
 		$(foreach bin,VBoxHeadless VirtualBox VirtualBoxVM VBoxNetDHCP VBoxNetNAT,\
 			$(VBOX_PATH_VBOX_APP_TMP)/Contents/MacOS/$(bin))
+ else
+	sudo chmod u+s \
+		$(foreach bin,VBoxHeadless VirtualBoxVM VBoxNetDHCP VBoxNetNAT,\
+			$(VBOX_PATH_VBOX_APP_TMP)/Contents/MacOS/$(bin))
+ endif
 endif
 	@# Do keyword replacement in the package info and description files.
 	$(SED) \
