--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72208 2018-05-15 04:11:35Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 72286 2018-05-22 14:02:15Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -315,8 +315,8 @@ if1of ($(USERNAME),bird) # experimental.
  VBoxVMM_SDKS.win          += VBOX_NTDLL
  VMMR3/NEMR3Native-win.cpp_DEFS.amd64 = _AMD64_
  VMMR3/NEMR3Native-win.cpp_INCS = \
- 	$(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17083.0/include/10.0.17083.0/um \
- 	$(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17083.0/include/10.0.17083.0/shared
+ 	$(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17134.0/include/10.0.17134.0/um \
+ 	$(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17134.0/include/10.0.17134.0/shared
 endif
 
 VBoxVMM_LIBS = \
