--- a/src/VBox/ValidationKit/common/Makefile.kmk
+++ b/src/VBox/ValidationKit/common/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72296 2018-05-23 12:18:08Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Common Python Code.
 #
@@ -37,6 +37,7 @@ testboxscript-common_INST = $(INST_TESTBOXSCRIPT)common/
 testboxscript-common_SOURCES = \
 	__init__.py \
 	utils.py \
+	netutils.py \
 	webutils.py \
 	constants/__init__.py=>constants/__init__.py \
 	constants/tbreq.py=>constants/tbreq.py \
