Devices/Makefile.kmk: Make it work with recent iasl versions, the generated headers have include guards based on the filename now but iasl doesn't convert dashes in the filename to underscores breaking the build. They also generate the identifier for the array containing the tables based on filename instead of the using the standard AmlCode we expect (missing file for cleaning)
svn:sync-xref-src-repo-rev: r122751

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72301 2018-05-23 15:30:54Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 72302 2018-05-23 15:32:47Z alexander.eichner@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -819,6 +819,7 @@ if !defined(VBOX_ONLY_EXTPACKS)         # Goes on almost to the end of the file.
   VBoxDD_CLEAN       += \
  	$(VBoxDD_0_OUTDIR)/vboxaml.hex \
  	$(VBoxDD_0_OUTDIR)/vboxaml.aml \
+ 	$(VBoxDD_0_OUTDIR)/vboxaml.aml.tmp \
  	$(VBoxDD_0_OUTDIR)/vboxssdt_standard.hex \
  	$(VBoxDD_0_OUTDIR)/vboxssdt_standard.aml \
  	$(VBoxDD_0_OUTDIR)/vboxssdt_standard.aml.tmp \
