FE/Qt bugref:9183 Adding a new QIDialog extension for medium selection
svn:sync-xref-src-repo-rev: r122814

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72350 2018-05-25 17:52:31Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 72357 2018-05-28 14:37:10Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -672,6 +672,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/hostnetwork/UIHostNetworkManager.h \
 	src/medium/UIMediumDetailsWidget.h \
 	src/medium/UIMediumManager.h \
+	src/medium/UIMediumSelector.h \
 	src/selector/UIDesktopPane.h \
 	src/selector/UIVMItem.h \
 	src/selector/UISelectorWindow.h \
@@ -1311,6 +1312,7 @@ VirtualBox_SOURCES = \
 	src/hostnetwork/UIHostNetworkUtils.cpp \
 	src/medium/UIMediumDetailsWidget.cpp \
 	src/medium/UIMediumManager.cpp \
+	src/medium/UIMediumSelector.cpp \
 	src/selector/UIDesktopPane.cpp \
 	src/selector/UIVMItem.cpp \
 	src/selector/UISelectorWindow.cpp \
