--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72357 2018-05-28 14:37:10Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 72374 2018-05-29 09:36:42Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -1473,6 +1473,7 @@ ifndef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/medium/UIMedium.cpp \
 	src/medium/UIMediumDefs.cpp \
 	src/medium/UIMediumEnumerator.cpp \
+	src/medium/UIMediumItem.cpp \
 	src/objects/UIRichTextString.cpp \
 	src/runtime/UIActionPoolRuntime.cpp \
 	src/runtime/UIConsoleEventHandler.cpp \
@@ -1801,6 +1802,7 @@ ifdef VBOX_GUI_WITH_SHARED_LIBRARY
 	src/medium/UIMedium.cpp \
 	src/medium/UIMediumDefs.cpp \
 	src/medium/UIMediumEnumerator.cpp \
+	src/medium/UIMediumItem.cpp \
 	src/objects/UIRichTextString.cpp \
 	src/runtime/UIActionPoolRuntime.cpp \
 	src/selector/UIActionPoolSelector.cpp \
