--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72375 2018-05-29 09:56:09Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 72377 2018-05-29 10:14:16Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -672,7 +672,6 @@ VirtualBox_QT_MOCHDRS = \
 	src/hostnetwork/UIHostNetworkManager.h \
 	src/medium/UIMediumDetailsWidget.h \
 	src/medium/UIMediumManager.h \
-	src/medium/UIMediumSelector.h \
 	src/selector/UIDesktopPane.h \
 	src/selector/UIVMItem.h \
 	src/selector/UISelectorWindow.h \
@@ -1314,7 +1313,6 @@ VirtualBox_SOURCES = \
 	src/hostnetwork/UIHostNetworkUtils.cpp \
 	src/medium/UIMediumDetailsWidget.cpp \
 	src/medium/UIMediumManager.cpp \
-	src/medium/UIMediumSelector.cpp \
 	src/selector/UIDesktopPane.cpp \
 	src/selector/UIVMItem.cpp \
 	src/selector/UISelectorWindow.cpp \
