--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71916 2018-04-19 10:05:28Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 72436 2018-06-04 19:59:26Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1628,6 +1628,9 @@ VBoxRT_SOURCES                := \
 		$(if-expr defined(VBOX_WITH_ALT_HASH_CODE), $(RuntimeR3_SOURCES), \
 		$(patsubst common/checksum/alt-%,common/checksum/openssl-%,$(RuntimeR3_SOURCES)) ) ) \
 	common/checksum/crc32-zlib.cpp \
+	common/fuzz/fuzz.cpp \
+	common/fuzz/fuzz-observer.cpp \
+	common/fuzz/fuzzmastercmd.cpp \
 	common/misc/aiomgr.cpp
 ifneq ($(KBUILD_TARGET),win)
 VBox/VBoxRTDeps.cpp_CXXFLAGS = -Wno-deprecated-declarations
