--- a/src/VBox/Runtime/tools/Makefile.kmk
+++ b/src/VBox/Runtime/tools/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71492 2018-03-24 22:23:10Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 72436 2018-06-04 19:59:26Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT tools.
 #
@@ -182,6 +182,11 @@ if !defined(VBOX_ONLY_BUILD)
  PROGRAMS += RTTraceLogTool
  RTTraceLogTool_TEMPLATE = VBoxR3Tool
  RTTraceLogTool_SOURCES = RTTraceLogTool.cpp
+
+ # RTFuzzMaster - Fuzzing master tool.
+ PROGRAMS += RTFuzzMaster
+ RTFuzzMaster_TEMPLATE = VBoxR3Tool
+ RTFuzzMaster_SOURCES = RTFuzzMaster.cpp
 
  if1of ($(KBUILD_TARGET), darwin linux solaris win)
   # RTKrnlModInfo - our lsmod/kextstat clone (for testing the RTKrnlMod code).
