--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72436 2018-06-04 19:59:26Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 72520 2018-06-11 21:16:31Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1262,6 +1262,7 @@ RuntimeR3_SOURCES.netbsd = \
 	r3/generic/RTTimeZoneGetCurrent-generic.cpp \
 	r3/generic/dirrel-r3-generic.cpp \
 	r3/posix/RTFileQueryFsSizes-posix.cpp \
+	r3/posix/RTFileSetAllocationSize-posix.cpp \
 	r3/posix/RTHandleGetStandard-posix.cpp \
 	r3/posix/RTMemProtect-posix.cpp \
 	r3/posix/RTPathUserHome-posix.cpp \
