--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72310 2018-05-24 07:29:35Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 72615 2018-06-19 14:43:12Z michal.necasek@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -146,6 +146,7 @@ if !defined(VBOX_ONLY_EXTPACKS)         # Goes on almost to the end of the file.
  	Bus/MsiCommon.cpp \
  	Bus/MsixCommon.cpp \
 	EFI/DevSmc.cpp \
+	EFI/DevFlash.cpp \
  	Graphics/DevVGA.cpp \
  	Storage/DevATA.cpp \
  	PC/DevPit-i8254.cpp \
