--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72503 2018-06-11 11:27:07Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72642 2018-06-21 15:41:14Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -689,6 +689,7 @@ ifndef VBOX_ONLY_EXTPACKS
  	VMMR0/GIMR0Kvm.cpp \
  	VMMR0/GMMR0.cpp \
  	VMMR0/GVMMR0.cpp \
+ 	VMMR0/EMR0.cpp \
  	VMMR0/HMR0.cpp \
  	VMMR0/HMR0A.asm \
  	VMMR0/HMVMXR0.cpp \
