--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72520 2018-06-11 21:16:31Z noreply@oracle.com $
+# $Id: Makefile.kmk 72940 2018-07-07 13:37:19Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1632,6 +1632,7 @@ VBoxRT_SOURCES                := \
 	common/fuzz/fuzz.cpp \
 	common/fuzz/fuzz-observer.cpp \
 	common/fuzz/fuzzmastercmd.cpp \
+	common/fuzz/fuzzclientcmd.cpp \
 	common/misc/aiomgr.cpp
 ifneq ($(KBUILD_TARGET),win)
 VBox/VBoxRTDeps.cpp_CXXFLAGS = -Wno-deprecated-declarations
