Main: Introducing IMediumIO for accessing the content of a medium.  The new IMedium::openForIO method instantiates and returns this interface.  N.B. Write access hasn't been implemented yet.
svn:sync-xref-src-repo-rev: r123500

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72324 2018-05-24 17:46:52Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72948 2018-07-07 16:20:42Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -471,6 +471,7 @@ VBoxSVC_SOURCES = \
 	src-server/MediumFormatImpl.cpp \
 	src-server/MediumImpl.cpp \
 	src-server/MediumLock.cpp \
+	src-server/MediumIOImpl.cpp \
 	src-server/NATEngineImpl.cpp \
 	src-server/NetworkAdapterImpl.cpp \
 	src-server/ParallelPortImpl.cpp \
