--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72925 2018-07-05 16:19:43Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73088 2018-07-12 11:26:02Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -959,7 +959,7 @@ if1of ($(SYSMODS),VMMRC)
  ifn1of ($(KBUILD_TARGET), linux solaris)
  else
 	$(call MSG_L1,VMM: Testing for undefined symbols in VMMRC using nm...)
-	$(QUIET)$(VBOX_NM) $^  2> /dev/null \
+	$(QUIET)$(VBOX_NM) $(VMMRC_1_TARGET)  2> /dev/null \
 		| $(SED) -n \
 			-e '/^ *U .*/!d' \
 			-e 's/ *U //' \
