Runtime/Makefile.kmk: Fix for VBoxRT-x86.so when chcon is present.
svn:sync-xref-src-repo-rev: r123673

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72959 2018-07-07 21:30:12Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 73098 2018-07-12 21:13:30Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1789,6 +1789,8 @@ ifeq ($(KBUILD_TARGET),linux)
   ifneq ($(wildcard /usr/bin/chcon),)
 VBoxRT_INSTTYPE = none
 VBoxRT_DEBUG_INSTTYPE = both
+
+VBoxRT-x86_INSTTYPE = $(NO_SUCH_VARIABLE)
 
 DLLS += VBoxRTDummy
 VBoxRTDummy_TEMPLATE = VBoxR3Dll
