--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72815 2018-07-03 09:55:30Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 73118 2018-07-13 12:07:42Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -699,11 +699,11 @@ VirtualBox_QT_MOCHDRS = \
 	src/widgets/UIApplianceExportEditorWidget.h \
 	src/widgets/UIApplianceImportEditorWidget.h \
 	src/widgets/UIEmptyFilePathSelector.h \
+	src/widgets/UIGuestOSTypeSelectionButton.h \
 	src/widgets/UILineTextEdit.h \
 	src/widgets/UISlidingWidget.h \
 	src/widgets/UITabBar.h \
 	src/widgets/UIMenuToolBar.h \
-	src/widgets/VBoxOSTypeSelectorButton.h \
 	src/widgets/graphics/UIGraphicsButton.h \
 	src/widgets/graphics/UIGraphicsRotatorButton.h \
 	src/widgets/graphics/UIGraphicsZoomButton.h \
@@ -1344,11 +1344,11 @@ VirtualBox_SOURCES = \
 	src/widgets/UIApplianceExportEditorWidget.cpp \
 	src/widgets/UIApplianceImportEditorWidget.cpp \
 	src/widgets/UIEmptyFilePathSelector.cpp \
+	src/widgets/UIGuestOSTypeSelectionButton.cpp \
 	src/widgets/UILineTextEdit.cpp \
 	src/widgets/UISlidingWidget.cpp \
 	src/widgets/UITabBar.cpp \
 	src/widgets/UIMenuToolBar.cpp \
-	src/widgets/VBoxOSTypeSelectorButton.cpp \
 	src/widgets/graphics/UIGraphicsButton.cpp \
 	src/widgets/graphics/UIGraphicsRotatorButton.cpp \
 	src/widgets/graphics/UIGraphicsZoomButton.cpp \
