--- a/src/VBox/Installer/linux/debian/rules
+++ b/src/VBox/Installer/linux/debian/rules
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-# $Id: rules 69500 2017-10-28 15:14:05Z knut.osmundsen@oracle.com $
+# $Id: rules 73123 2018-07-13 13:40:59Z noreply@oracle.com $
 ## @file
 # VirtualBox rules.
 #
@@ -106,7 +106,8 @@ cfg_flags := $(if $(NOQT),--disable-qt,) \
 	     $(if $(NOWINE),,--setup-wine) \
 	     $(if $(NOWEBSVC),,$(if $(ose),--enable-webservice,)) \
 	     $(if $(VNC),--enable-vnc,) \
-	     --disable-extpack
+	     --disable-extpack \
+	     $(if $(filter DEBIAN_7_0,$(debdist)),--build-libopus,)
 
 bld_flags := AUTOCFG=$(current)/debian/AutoConfig.kmk \
 	     LOCALCFG=$(current)/debian/LocalConfig.kmk \
