--- a/src/VBox/Installer/linux/rpm/rules
+++ b/src/VBox/Installer/linux/rpm/rules
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-# $Id: rules 73093 2018-07-12 19:10:56Z noreply@oracle.com $
+# $Id: rules 73123 2018-07-13 13:40:59Z noreply@oracle.com $
 ## @file
 # VirtualBox rules.
 #
@@ -137,6 +137,7 @@ endif
 cfg_flags := $(if $(NOQT),--disable-qt,) \
 	     $(if $(NOSDL),--disable-vboxsdl,) \
 	     $(if $(filter el5 el6,$(rpmrel)),--build-libvpx,) \
+	     $(if $(filter el5 el6,$(rpmrel)),--build-libopus,) \
 	     $(if $(filter el5,$(rpmrel)),--build-libcurl,) \
 	     $(if $(filter el5,$(rpmrel)),--disable-sdl-ttf,) \
 	     $(if $(filter el5,$(rpmrel)),--disable-pulse,) \
