--- a/src/VBox/Debugger/Makefile.kmk
+++ b/src/VBox/Debugger/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73131 2018-07-13 17:10:33Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox debugger.
 #
@@ -44,6 +44,7 @@ Debugger_SOURCES   = \
 	DBGCCmdHlp.cpp \
 	DBGCCmdWorkers.cpp \
 	DBGCCommands.cpp \
+	DBGCDumpImage.cpp \
 	DBGCFunctions.cpp \
 	DBGCEmulateCodeView.cpp \
 	DBGCOps.cpp \
