VMM,DBGC,IPRT: In memory
- VMM: Morphed part of the NT kernel digger into DBGFR3ModInMem.
- DBGC: Added 'loadinmem' command for accessing the DBGFR3ModInMem functionality.
- IPRT: Modified RTDbgModCreateFromPeImage to clearly indicate to caller whether the loader module was consumed or not (missing direct ref counting).
- IPRT: Added RTLdrGetHostArch for resolving RTLDRARCH_HOST.
- IPRT: Added RTLdrArchName for naming a RTLDRARCH value.




svn:sync-xref-src-repo-rev: r123740

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73088 2018-07-12 11:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73150 2018-07-16 10:03:41Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -98,6 +98,7 @@ VBoxVMM_SOURCES  = \
 	VMMR3/DBGFInfo.cpp \
 	VMMR3/DBGFLog.cpp \
 	VMMR3/DBGFMem.cpp \
+	VMMR3/DBGFR3ModInMem.cpp \
 	VMMR3/DBGFOS.cpp \
 	VMMR3/DBGFR3PlugIn.cpp \
 	VMMR3/DBGFReg.cpp \
