--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72996 2018-07-09 06:48:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73154 2018-07-16 11:02:35Z valery.portnyagin@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -454,6 +454,9 @@ VBoxSVC_SOURCES = \
 	src-server/BIOSSettingsImpl.cpp \
 	src-server/ClientWatcher.cpp \
 	src-server/ClientToken.cpp \
+	src-server/CloudClientImpl.cpp \
+	src-server/CloudUserProfileListImpl.cpp \
+	src-server/CloudUserProfileManagerImpl.cpp \
 	src-server/DHCPServerImpl.cpp \
 	src-server/NetworkServiceRunner.cpp \
 	src-server/NATNetworkImpl.cpp \
