PGM: Working on consolidating templated code... bugref:9044
svn:sync-xref-src-repo-rev: r123878

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73150 2018-07-16 10:03:41Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73271 2018-07-20 14:53:56Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -986,9 +986,7 @@ include $(FILE_KBUILD_SUB_FOOTER)
 
 
 # Alias the PGM templates to the object in which they are defined.
-PGMInternal.o \
-PGMBth.o   	PGMGst.o   	PGMShw.o \
-PGMBth.obj 	PGMGst.obj 	PGMShw.obj: 	PGM.o
+PGMInternal.o: 	PGM.o
 
 PGMAllBth.o   	PGMAllGst.o   	PGMAllShw.o \
 PGMAllBth.obj 	PGMAllGst.obj 	PGMAllShw.obj: 	PGMAll.o
