--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73271 2018-07-20 14:53:56Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73348 2018-07-25 09:25:45Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -92,6 +92,7 @@ VBoxVMM_SOURCES  = \
 	VMMR3/DBGFAddr.cpp \
 	VMMR3/DBGFAddrSpace.cpp \
 	VMMR3/DBGFBp.cpp \
+	VMMR3/DBGFR3BugCheck.cpp \
 	VMMR3/DBGFCoreWrite.cpp \
 	VMMR3/DBGFCpu.cpp \
 	VMMR3/DBGFDisas.cpp \
