--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73424 2018-08-01 14:07:18Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 73425 2018-08-01 14:15:25Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -1206,7 +1206,7 @@ VirtualBox_QT_MOCSRCS = \
 	src/wizards/importappliance/UIWizardImportApp.cpp
 
 ifdef VBOX_GUI_WITH_NEW_MANAGER
- VirtualBox_QT_MOCSRCS = \
+ VirtualBox_QT_MOCSRCS += \
 	src/manager/UIWelcomePane.cpp
 endif
 
