--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73425 2018-08-01 14:15:25Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 73492 2018-08-03 15:30:44Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -750,6 +750,7 @@ ifdef VBOX_GUI_WITH_NEW_MANAGER
 	src/manager/UIToolPaneGlobal.h \
 	src/manager/UIToolPaneMachine.h \
 	src/manager/UIVirtualBoxManager.h \
+	src/manager/UIVirtualBoxManagerWidget.h \
 	src/manager/UIVirtualMachineItem.h \
 	src/manager/UIWelcomePane.h \
 	src/manager/chooser/UIChooser.h \
@@ -1426,6 +1427,7 @@ ifdef VBOX_GUI_WITH_NEW_MANAGER
 	src/manager/UIToolPaneGlobal.cpp \
 	src/manager/UIToolPaneMachine.cpp \
 	src/manager/UIVirtualBoxManager.cpp \
+	src/manager/UIVirtualBoxManagerWidget.cpp \
 	src/manager/UIVirtualMachineItem.cpp \
 	src/manager/UIWelcomePane.cpp \
 	src/manager/chooser/UIChooser.cpp \
