bugref:9152. New classes CloudAPI, OCIIAM, OCIObjectStorage, OCICompute, CloudCommandCl, DataModel, DataParser and their descendants.
svn:sync-xref-src-repo-rev: r124164

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73337 2018-07-23 22:05:26Z valery.portnyagin@oracle.com $
+# $Id: Makefile.kmk 73535 2018-08-06 22:10:52Z valery.portnyagin@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -454,6 +454,7 @@ VBoxSVC_SOURCES = \
 	src-server/BIOSSettingsImpl.cpp \
 	src-server/ClientWatcher.cpp \
 	src-server/ClientToken.cpp \
+	src-server/CloudAPI.cpp \
 	src-server/CloudClientImpl.cpp \
 	src-server/CloudUserProfilesImpl.cpp \
 	src-server/CloudUserProfileManagerImpl.cpp \
