VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK (bugref:9152)
svn:sync-xref-src-repo-rev: r124188

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73535 2018-08-06 22:10:52Z valery.portnyagin@oracle.com $
+# $Id: Makefile.kmk 73551 2018-08-07 16:41:59Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -76,6 +76,7 @@ VBOX_MAIN_DEFS += \
 	$(if $(VBOX_WITH_HOSTNETIF_API),VBOX_WITH_HOSTNETIF_API,) \
 	$(if $(VBOX_WITH_MIDL_PROXY_STUB),VBOX_WITH_MIDL_PROXY_STUB,) \
 	$(if $(VBOX_WITH_SDS),VBOX_WITH_SDS,) \
+       $(if $(VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK),VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK,)
 
 # Unconditionally enable the new semaphore key generation code
 VBOX_MAIN_DEFS += VBOX_WITH_NEW_SYS_V_KEYGEN
