IPRT/rest: Implemented RTCRestOutputToString. bugref:9167
svn:sync-xref-src-repo-rev: r124596

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73875 2018-08-24 15:37:06Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73879 2018-08-24 16:15:33Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -544,6 +544,7 @@ RuntimeR3_SOURCES       = \
 	common/rand/randparkmiller.cpp \
 	common/rest/RTCRestJsonPrimaryCursor.cpp \
 	common/rest/RTCRestObjectBase.cpp \
+	common/rest/RTCRestOutputToString.cpp \
 	common/sort/RTSortIsSorted.cpp \
 	common/sort/RTSortApvIsSorted.cpp \
 	common/sort/shellsort.cpp \
