IPRT/rest: More 'api' generator work. bugref:9167
svn:sync-xref-src-repo-rev: r124606

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73879 2018-08-24 16:15:33Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73889 2018-08-25 13:27:37Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -542,6 +542,7 @@ RuntimeR3_SOURCES       = \
 	common/rand/rand.cpp \
 	common/rand/randadv.cpp \
 	common/rand/randparkmiller.cpp \
+	common/rest/RTCRestClientApiBase.cpp \
 	common/rest/RTCRestJsonPrimaryCursor.cpp \
 	common/rest/RTCRestObjectBase.cpp \
 	common/rest/RTCRestOutputToString.cpp \
