IPRT/rest: build fix. bugref:9167
svn:sync-xref-src-repo-rev: r124622

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73895 2018-08-26 15:47:58Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73905 2018-08-27 08:58:29Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -542,10 +542,6 @@ RuntimeR3_SOURCES       = \
 	common/rand/rand.cpp \
 	common/rand/randadv.cpp \
 	common/rand/randparkmiller.cpp \
-	common/rest/rest-primary-object-types.cpp \
-	common/rest/RTCRestClientApiBase.cpp \
-	common/rest/RTCRestJsonPrimaryCursor.cpp \
-	common/rest/RTCRestOutputToString.cpp \
 	common/sort/RTSortIsSorted.cpp \
 	common/sort/RTSortApvIsSorted.cpp \
 	common/sort/shellsort.cpp \
@@ -1654,7 +1650,11 @@ endif
 ifdef VBOX_WITH_LIBCURL
  VBoxRT_SOURCES               += \
  	common/misc/s3.cpp \
- 	generic/http-curl.cpp
+ 	generic/http-curl.cpp \
+ 	common/rest/rest-primary-object-types.cpp \
+ 	common/rest/RTCRestClientApiBase.cpp \
+ 	common/rest/RTCRestJsonPrimaryCursor.cpp \
+ 	common/rest/RTCRestOutputToString.cpp
 endif
 ifdef VBOX_WITH_DTRACE_R3
  VBoxRT_SOURCES               += \
