iprt/rest: More work on the API code generation. bugref:9167
svn:sync-xref-src-repo-rev: r124639

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73905 2018-08-27 08:58:29Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73918 2018-08-27 15:08:55Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1653,6 +1653,7 @@ ifdef VBOX_WITH_LIBCURL
  	generic/http-curl.cpp \
  	common/rest/rest-primary-object-types.cpp \
  	common/rest/RTCRestClientApiBase.cpp \
+ 	common/rest/RTCRestClientRequestBase.cpp \
  	common/rest/RTCRestJsonPrimaryCursor.cpp \
  	common/rest/RTCRestOutputToString.cpp
 endif
